# cnsr

./: .gitignore  .pre-commit-config.yaml  COPYING.md  FILESTRUCTURE.md  MANIFEST.in  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
cnsr/: __init__.py  install.py  paths.py
cnsr/jupyter_app_launcher/: config.yaml
cnsr/notebooks/: ERN.ipynb  FTT.ipynb  HRV.ipynb
doc/: api.rst  conf.py  index.rst
jupyter_app_launcher/: config.yaml
notebooks/: EDA.ipynb  FAA.ipynb  RS.ipynb
tests/: conftest.py  test_cnsr.py  test_paths.py
