# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm >=7",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for cnsr's version
[project]
name = "cnsr"
description = "Lab code package for the CNSR lab at Heidelberg University"
readme = "README.md"
maintainers = [
    { name = "Dominic Kempf", email = "ssc@iwr.uni-heidelberg.de" },
]
dynamic = ["version"]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click",
    "ipyfilechooser",
    "jupyter_app_launcher >=0.1,<1",
    "jupyterlab<4",
    "matplotlib",
    "mne>=1.4,<2",
    "mne-nirs>=0.5,<1",
    "neurokit2",
    "nilearn>=0.10,<1",
    "numpy",
    "openpyxl>=3.1,<4",
    "pandas",
]

[project.optional-dependencies]
tests = [
    "pytest",
]

[project.scripts]
cnsr_copy_notebooks = "cnsr.install:copy_notebooks"
install_cnsr_launcher_data = "cnsr.install:install_cnsr_launcher_data"

# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "cnsr",
]

# Configure setuptools_scm, which extracts the version number from
# the version control system. For more information see its documentation:
# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "cnsr/_version.py"

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
